--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script><i cla
 					</div>
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/img-1.PNG);">
+							<div class="project" style="background-image: url(images/img-1.png);">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 01</a></h3>
