--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script><i cla
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/img-2.PNG);">
+							<div class="project" style="background-image: url(images/img-2.png);">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 02</a></h3>
@@ -531,7 +531,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script><i cla
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
-							<div class="project" style="background-image: url(images/img-3.PNG);">
+							<div class="project" style="background-image: url(images/img-3.png);">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 03</a></h3>
@@ -546,7 +546,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script><i cla
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInBottom">
-							<div class="project" style="background-image: url(images/img-4.PNG);">
+							<div class="project" style="background-image: url(images/img-4.png);">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 04</a></h3>
@@ -561,7 +561,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script><i cla
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/img-5.PNG);">
+							<div class="project" style="background-image: url(images/img-5.png);">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 05</a></h3>
